# suastawa-consulting

./: .env.txt  README.md  package.json  pyproject.toml  server.js  wrangler.toml
output/: content.md  index.html  seo.md
output/admin/: admin.html
output/adminsc/: admin.html
src/suastawa_consulting_flow/: main.py  netlify.toml
src/suastawa_consulting_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
